fix: hard to read text
feat: additional overflow utilities

--- a/client/src/styles/customised-bootstrap/maps.scss
+++ b/client/src/styles/customised-bootstrap/maps.scss
@@ -128,5 +128,15 @@ $utilities: map-merge(
             responsive: true,
             values: auto hidden visible scroll
         ),
+        "overflow-x": (
+            property: overflow-x,
+            responsive: true,
+            values: auto hidden visible scroll
+        ),
+        "overflow": (
+            property: overflow,
+            responsive: true,
+            values: auto hidden visible scroll
+        ),
     )
 );
